legacy/cluster/media/backup-ingest.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: backup-ingest
  namespace: media
spec:
  nodeName: luma
  containers:
    - name: backup
      image: docker.io/alpine@sha256:56fa17d2a7e7f168a043a2712e63aed1f8543aeafdcee47c58dcffe38ed51099
      volumeMounts:
        - name: downloads
          mountPath: /downloads
        - name: media
          mountPath: /media
        - name: backup
          mountPath: /backup
      command:
        - sleep
        - '1000000'
  volumes:
    - name: downloads
      persistentVolumeClaim:
        claimName: downloads
    - name: media
      persistentVolumeClaim:
        claimName: media
    - name: backup
      hostPath:
        path: /temp_backup
        type: Directory
