legacy/cluster/media/config-modifier.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: config-modifier
  namespace: media
spec:
  restartPolicy: Never
  volumes:
    - name: sonarr-config
      persistentVolumeClaim:
        claimName: sonarr-config
    - name: radarr-config
      persistentVolumeClaim:
        claimName: radarr-config
    - name: readarr-config
      persistentVolumeClaim:
        claimName: readarr-config
    - name: lidarr-config
      persistentVolumeClaim:
        claimName: lidarr-config
  containers:
    - name: config
      image: docker.io/ubuntu@sha256:72297848456d5d37d1262630108ab308d3e9ec7ed1c3286a32fe09856619a782
      command: [sh, -c, echo "Start Editing!" && sleep 3600]
      volumeMounts:
        - name: sonarr-config
          mountPath: /sonarr
        - name: radarr-config
          mountPath: /radarr
        - name: readarr-config
          mountPath: /readarr
        - name: lidarr-config
          mountPath: /lidarr
