legacy/cluster/media/music.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: music
  namespace: media
  labels:
    app: music
spec:
  replicas: 1
  selector:
    matchLabels:
      app: music
  template:
    metadata:
      labels:
        app: music
    spec:
      nodeName: luma
      securityContext:
        fsGroup: 1000
      containers:
        - name: music
          image: docker.io/epoupon/lms:3.62.1@sha256:406471bdc87de6e692c243ac1ca47734f0e30c1ac178717f21975df63ab032d6
          resources:
            requests:
              memory: 300Mi
              cpu: 400m
            limits:
              memory: 300Mi
              cpu: 400m
          ports:
            - containerPort: 5082
          volumeMounts:
            - name: config
              mountPath: /var/lms
            - name: media
              mountPath: /music
          livenessProbe:
            httpGet:
              path: /
              port: 5082
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: music-config
        - name: media
          persistentVolumeClaim:
            claimName: media
---
apiVersion: v1
kind: Service
metadata:
  name: music
  namespace: media
spec:
  selector:
    app: music
  ports:
    - protocol: TCP
      port: 5082
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: luma.chrismiller.xyz
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-url: https://id.luma.chrismiller.xyz/oauth2/auth
    nginx.ingress.kubernetes.io/auth-signin: https://id.luma.chrismiller.xyz/oauth2/start?rd=$scheme://$host$escaped_request_uri
spec:
  tls:
    - hosts:
        - music.luma.chrismiller.xyz
      secretName: music-luma-tls
  rules:
    - host: music.luma.chrismiller.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: music
                port:
                  number: 5082
