legacy/cluster/media/mylar3.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mylar3
  namespace: media
  labels:
    app: mylar3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mylar3
  template:
    metadata:
      labels:
        app: mylar3
    spec:
      nodeName: luma
      securityContext:
        fsGroup: 1000
      containers:
        - name: mylar3
          image: lscr.io/linuxserver/mylar3:latest@sha256:90ea9825c49c63f28a25b843fe77c9706d1abf9e51a34fc21b7ec2dada5b1c7d
          resources:
            requests:
              memory: 200Mi
              cpu: 200m
            limits:
              memory: 200Mi
              cpu: 200m
          ports:
            - containerPort: 8090
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
            - name: media
              mountPath: /media
          livenessProbe:
            httpGet:
              path: /
              port: 8090
            initialDelaySeconds: 15
            periodSeconds: 5
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: mylar3-config
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
        - name: media
          persistentVolumeClaim:
            claimName: media
---
apiVersion: v1
kind: Service
metadata:
  name: mylar3
  namespace: media
spec:
  selector:
    app: mylar3
  ports:
    - protocol: TCP
      port: 8090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mylar3
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: luma.chrismiller.xyz
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-url: https://id.luma.chrismiller.xyz/oauth2/auth
    nginx.ingress.kubernetes.io/auth-signin: https://id.luma.chrismiller.xyz/oauth2/start?rd=$scheme://$host$escaped_request_uri
spec:
  tls:
    - hosts:
        - comics.luma.chrismiller.xyz
      secretName: comics-luma-tls
  rules:
    - host: comics.luma.chrismiller.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mylar3
                port:
                  number: 8090
