legacy/cluster/media/nzbhydra.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nzbhydra
  namespace: media
  labels:
    app: nzbhydra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nzbhydra
  template:
    metadata:
      labels:
        app: nzbhydra
    spec:
      nodeName: luma
      containers:
        - name: nzbhydra
          image: ghcr.io/hotio/nzbhydra2@sha256:3c2b19ddb6a201ae43789c4d24d4c8d402d2e653eab74b9760d0967a1124ef86
          resources:
            requests:
              memory: 600Mi
              cpu: 200m
            limits:
              memory: 600Mi
              cpu: 200m
          ports:
            - containerPort: 5076
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: nzbhydra-config
---
apiVersion: v1
kind: Service
metadata:
  name: nzbhydra
  namespace: media
spec:
  selector:
    app: nzbhydra
  ports:
    - protocol: TCP
      port: 5076
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nzb
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: luma.chrismiller.xyz
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-url: https://id.luma.chrismiller.xyz/oauth2/auth
    nginx.ingress.kubernetes.io/auth-signin: https://id.luma.chrismiller.xyz/oauth2/start?rd=$scheme://$host$escaped_request_uri
spec:
  tls:
    - hosts:
        - nzb.luma.chrismiller.xyz
      secretName: nzb-luma-tls
  rules:
    - host: nzb.luma.chrismiller.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nzbhydra
                port:
                  number: 5076
